<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuLesson"
        android:icon="@drawable/ic_lesson"
        android:title="@string/menu_exit"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuSchedule"
        android:icon="@drawable/ic_schedule"
        android:iconTint="@color/white"
        android:title="@string/menu_schedule"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuReport"
        android:icon="@drawable/ic_report"
        android:iconTint="@color/white"
        android:title="@string/menu_report"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuExit"
        android:icon="@drawable/ic_exit"
        android:title="@string/menu_exit"
        app:showAsAction="always" />
</menu>